package com.auction.server.model;

public interface Entity {
    String getId();
    void setId(String id);
}